Bug fix para uso de mais de um Pooler, foi relatado o BUG e já corrigido.  Início da criação dos métodos Publicáveis.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@144 5a50b8e4-c46e-494c-8199-665086288703

--- a/RestEasyObjects.dproj
+++ b/RestEasyObjects.dproj
@@ -212,6 +212,7 @@
         <DCCReference Include="URestPoolerDBMethod.pas"/>
         <DCCReference Include="uMasterDetailData.pas"/>
         <DCCReference Include="uWebModuleMethod.pas"/>
+        <DCCReference Include="uPoolerServerMethods.pas"/>
         <RcItem Include="TRESTClientSQL.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTClientSQL</ResourceId>
