--- a/RestEasyObjectsResource.rc
+++ b/RestEasyObjectsResource.rc
@@ -3,3 +3,4 @@ TRESTDataBase BITMAP "TRESTDataBase.bmp"
 TRESTPoolerDB BITMAP "TRESTPoolerDB.bmp"
 TRESTPoolerList BITMAP "TRESTPoolerList.bmp"
 TRESTBridge BITMAP "TRESTBridge.bmp"
+TRESTDriverFD BITMAP "TRESTDriverFD.bmp"
