Adicionado o Driver para ZEOS no Servidor, esse driver ainda não conta com Reflexão, mais funciona para SQL normalmente, precisa de testes mais já está disponível.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@172 5a50b8e4-c46e-494c-8199-665086288703

--- a/RestEasyObjectsResource.rc
+++ b/RestEasyObjectsResource.rc
@@ -4,3 +4,4 @@ TRESTPoolerDB BITMAP "TRESTPoolerDB.bmp"
 TRESTPoolerList BITMAP "TRESTPoolerList.bmp"
 TRESTBridge BITMAP "TRESTBridge.bmp"
 TRESTDriverFD BITMAP "TRESTDriverFD.bmp"
+TRESTDriverZEOS BITMAP "TRESTDriverZEOS.bmp"
