--- a/RestEasyObjects.dproj
+++ b/RestEasyObjects.dproj
@@ -125,7 +125,7 @@
         <DCC_UsePackage>rtl;DbxCommonDriver;dbrtl;DataSnapClient;DataSnapCommon;DbxClientDriver;CustomIPTransport;FireDAC;FireDACCommonDriver;FireDACCommon;FireDACIBDriver;dsnap;dbexpress;dbxcds;DataSnapFireDAC;IndyIPClient;IndyIPCommon;IndySystem;IndyProtocols;IndyCore;bindengine;bindcomp;soaprtl;RESTComponents;IndyIPServer;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_UsePackage>rtl;vcl;DbxCommonDriver;dbrtl;DataSnapClient;DataSnapCommon;DbxClientDriver;CustomIPTransport;vclFireDAC;FireDAC;FireDACCommonDriver;FireDACCommon;FireDACIBDriver;dsnap;dbexpress;dbxcds;DataSnapServer;DataSnapFireDAC;IndyIPClient;IndyIPCommon;IndySystem;IndyProtocols;IndyCore;bindengine;bindcomp;soaprtl;RESTComponents;IndyIPServer;DataSnapServerMidas;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;DbxCommonDriver;dbrtl;DataSnapClient;DataSnapCommon;DbxClientDriver;CustomIPTransport;vclFireDAC;FireDAC;FireDACCommonDriver;FireDACCommon;FireDACIBDriver;dsnap;dbexpress;dbxcds;DataSnapServer;DataSnapFireDAC;IndyIPClient;IndyIPCommon;IndySystem;IndyProtocols;IndyCore;bindengine;bindcomp;soaprtl;RESTComponents;IndyIPServer;DataSnapServerMidas;ZComponent;ZDbc;ZPlain;ZCore;ZParseSql;$(DCC_UsePackage)</DCC_UsePackage>
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -136,7 +136,7 @@
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <VerInfo_Keys>CompanyName=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(ModuleName);FileDescription=$(ModuleName);ProductName=$(ModuleName)</VerInfo_Keys>
-        <DCC_UsePackage>rtl;vcl;DbxCommonDriver;dbrtl;DataSnapClient;DataSnapCommon;DbxClientDriver;CustomIPTransport;vclFireDAC;FireDAC;FireDACCommonDriver;FireDACCommon;FireDACIBDriver;dsnap;dbexpress;dbxcds;DataSnapServer;DataSnapFireDAC;IndyIPClient;IndyIPCommon;IndySystem;IndyProtocols;IndyCore;bindengine;bindcomp;soaprtl;RESTComponents;IndyIPServer;DataSnapServerMidas;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;DbxCommonDriver;dbrtl;DataSnapClient;DataSnapCommon;DbxClientDriver;CustomIPTransport;vclFireDAC;FireDAC;FireDACCommonDriver;FireDACCommon;FireDACIBDriver;dsnap;dbexpress;dbxcds;DataSnapServer;DataSnapFireDAC;IndyIPClient;IndyIPCommon;IndySystem;IndyProtocols;IndyCore;bindengine;bindcomp;soaprtl;RESTComponents;IndyIPServer;DataSnapServerMidas;ZComponent;ZDbc;ZPlain;ZCore;ZParseSql;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -167,10 +167,10 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_UnitSearchPath>.\$(Platform)\$(Config);$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_BplOutput>.\$(Platform)\$(Config)</DCC_BplOutput>
-        <VerInfo_Build>232</VerInfo_Build>
+        <VerInfo_Build>236</VerInfo_Build>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Release>1</VerInfo_Release>
-        <VerInfo_Keys>CompanyName=XyberPower Desenvolvimento;FileDescription=Pacote de Componentes REST para usuários de Dataset;FileVersion=1.0.1.232;InternalName=RestEasyObjects;LegalCopyright=;LegalTrademarks=;OriginalFilename=RestEasyObjects.dpk;ProductName=RestEasyObjects;ProductVersion=1.0.1.1;Comments=Criado por : Gilberto Rocha da Silva;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=XyberPower Desenvolvimento;FileDescription=Pacote de Componentes REST para usuários de Dataset;FileVersion=1.0.1.236;InternalName=RestEasyObjects;LegalCopyright=;LegalTrademarks=;OriginalFilename=RestEasyObjects.dpk;ProductName=RestEasyObjects;ProductVersion=1.0.1.1;Comments=Criado por : Gilberto Rocha da Silva;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
     </PropertyGroup>
     <ItemGroup>
@@ -206,6 +206,11 @@
         <DCCReference Include="vclFireDAC.dcp"/>
         <DCCReference Include="IndyIPServer.dcp"/>
         <DCCReference Include="DataSnapServerMidas.dcp"/>
+        <DCCReference Include="ZComponent.dcp"/>
+        <DCCReference Include="ZDbc.dcp"/>
+        <DCCReference Include="ZPlain.dcp"/>
+        <DCCReference Include="ZCore.dcp"/>
+        <DCCReference Include="ZParseSql.dcp"/>
         <DCCReference Include="uPoolerMethod.pas"/>
         <DCCReference Include="uComboPoolers.pas"/>
         <DCCReference Include="uRestPoolerDB.pas"/>
@@ -216,6 +221,7 @@
         <DCCReference Include="uPoolerServerMethods.pas"/>
         <DCCReference Include="SMRestPoolerDBMethods.pas"/>
         <DCCReference Include="Connectors\uRestDriverFD.pas"/>
+        <DCCReference Include="Connectors\uRestDriverZEOS.pas"/>
         <RcItem Include="TRESTClientSQL.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTClientSQL</ResourceId>
@@ -239,6 +245,10 @@
         <RcItem Include="TRESTDriverFD.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTDriverFD</ResourceId>
+        </RcItem>
+        <RcItem Include="TRESTDriverZEOS.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDriverZEOS</ResourceId>
         </RcItem>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
@@ -284,7 +294,16 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
                     <Platform Name="OSX32">
                         <RemoteDir>Contents\Resources</RemoteDir>
@@ -624,16 +643,7 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                </DeployClass>
+                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
