Ajustes gerais no RESTPoolerService.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@205 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Packages/Delphi/RestEasyObjectsCORE.dproj
+++ b/CORE/Packages/Delphi/RestEasyObjectsCORE.dproj
@@ -141,12 +141,14 @@
         <DCCReference Include="IndySystem.dcp"/>
         <DCCReference Include="IndyProtocols.dcp"/>
         <DCCReference Include="IndyCore.dcp"/>
+        <DCCReference Include="soaprtl.dcp"/>
         <DCCReference Include="..\..\Source\uRESTDWBase.pas"/>
         <DCCReference Include="..\..\Source\uRESTDWReg.pas"/>
         <DCCReference Include="..\..\Source\libs\ServerUtils.pas"/>
         <DCCReference Include="..\..\Source\libs\StringBuilderUnit.pas"/>
         <DCCReference Include="..\..\Source\libs\SysTypes.pas"/>
         <DCCReference Include="..\..\Source\libs\uDWConsts.pas"/>
+        <DCCReference Include="..\..\Source\libs\uDWJSONTools.pas"/>
         <RcItem Include="..\..\Images\TRESTServicePooler.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTServicePooler</ResourceId>
