Commit do novo componente RESTClientPooler e seu exemplo funcional (Versão CORE).
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@210 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Packages/Delphi/RestEasyObjectsCOREResource.rc
+++ b/CORE/Packages/Delphi/RestEasyObjectsCOREResource.rc
@@ -1,1 +1,2 @@
 TRESTServicePooler BITMAP "..\\..\\Images\\TRESTServicePooler.bmp"
+TRESTClientPooler BITMAP "..\\..\\Images\\TRESTClientPooler.bmp"
