--- a/CORE/Samples/SimpleServer/Server/Lazarus/Config_ServerREST.ini
+++ b/CORE/Samples/SimpleServer/Server/Lazarus/Config_ServerREST.ini
@@ -1,7 +1,7 @@
 [BancoDados]
-Servidor=cbAdaptadores
-BD=
-Pasta=
+Servidor=Placa #1 - 127.0.0.1
+BD=EMPLOYEE.FDB
+Pasta=D:\Meus Dados\Projetos\SUGV\Componentes\XyberPower\REST_Controls\DEMO\
 PortaDB=3050
 PortaDW=8082
 UsuarioBD=sysdba
