--- a/CORE/Packages/Delphi/RestEasyObjectsCOREResource.rc
+++ b/CORE/Packages/Delphi/RestEasyObjectsCOREResource.rc
@@ -1,2 +1,7 @@
 TRESTServicePooler BITMAP "..\\..\\Images\\TRESTServicePooler.bmp"
 TRESTClientPooler BITMAP "..\\..\\Images\\TRESTClientPooler.bmp"
+TRESTDWClientSQL BITMAP "..\\..\\Images\\TRESTDWClientSQL.bmp"
+TRESTDWDataBase BITMAP "..\\..\\Images\\TRESTDWDataBase.bmp"
+TRESTDWPoolerDB BITMAP "..\\..\\Images\\TRESTDWPoolerDB.bmp"
+TRESTDWPoolerList BITMAP "..\\..\\Images\\TRESTDWPoolerList.bmp"
+TRESTDWStoredProc BITMAP "..\\..\\Images\\TRESTDWStoredProc.bmp"
