--- a/CORE/Packages/Delphi/RestEasyObjectsCORE.dproj
+++ b/CORE/Packages/Delphi/RestEasyObjectsCORE.dproj
@@ -141,10 +141,10 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Build>26</VerInfo_Build>
+        <VerInfo_Build>29</VerInfo_Build>
         <VerInfo_Release>1</VerInfo_Release>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Keys>CompanyName=XyberPower Desenvolvimento;FileDescription=$(MSBuildProjectName);FileVersion=1.0.1.26;InternalName=REST Dataware CORE Version;LegalCopyright=REST Dataware CORE Version;LegalTrademarks=REST Dataware;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.1;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=XyberPower Desenvolvimento;FileDescription=$(MSBuildProjectName);FileVersion=1.0.1.29;InternalName=REST Dataware CORE Version;LegalCopyright=REST Dataware CORE Version;LegalTrademarks=REST Dataware;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.1;Comments=</VerInfo_Keys>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
@@ -173,6 +173,8 @@
         <DCCReference Include="..\..\Source\libs\uDWJSONObject.pas"/>
         <DCCReference Include="..\..\Source\libs\uKBDynamic.pas"/>
         <DCCReference Include="..\..\Source\libs\JSON\uDWJSONParser.pas"/>
+        <DCCReference Include="..\..\Source\uRESTDWPoolerDB.pas"/>
+        <DCCReference Include="..\..\Source\uRESTDWMasterDetailData.pas"/>
         <RcItem Include="..\..\Images\TRESTServicePooler.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTServicePooler</ResourceId>
@@ -180,6 +182,26 @@
         <RcItem Include="..\..\Images\TRESTClientPooler.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TRESTClientPooler</ResourceId>
+        </RcItem>
+        <RcItem Include="..\..\Images\TRESTDWClientSQL.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDWClientSQL</ResourceId>
+        </RcItem>
+        <RcItem Include="..\..\Images\TRESTDWDataBase.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDWDataBase</ResourceId>
+        </RcItem>
+        <RcItem Include="..\..\Images\TRESTDWPoolerDB.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDWPoolerDB</ResourceId>
+        </RcItem>
+        <RcItem Include="..\..\Images\TRESTDWPoolerList.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDWPoolerList</ResourceId>
+        </RcItem>
+        <RcItem Include="..\..\Images\TRESTDWStoredProc.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TRESTDWStoredProc</ResourceId>
         </RcItem>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -237,7 +259,16 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
                     <Platform Name="OSX32">
                         <RemoteDir>Contents\Resources</RemoteDir>
@@ -576,16 +607,7 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                </DeployClass>
+                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
